tests/invalid_nodepend/type_lhs_var.err_exp
type_lhs_var.m:010: On the left hand side of type definition: error: expected a
type_lhs_var.m:010:   type constructor and zero or more type variables as
type_lhs_var.m:010:   arguments, got `A'.
type_lhs_var.m:012: On the left hand side of type definition: error: expected a
type_lhs_var.m:012:   type constructor and zero or more type variables as
type_lhs_var.m:012:   arguments, got `B'.
